--- a/main.css
+++ b/main.css
@@ -11,14 +11,17 @@
   --color-over-primary: black;
   --text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-  --color-card-optional: #d1f7c7;
-  --color-card-optional-title: #a6f691;
+  --color-card-optional: #e3f7c7;
+  --color-card-optional-title: #c9f691;
 
-  --color-card-important: #e7f7c7;
-  --color-card-important-title: #ecf56a;
+  --color-card-important: #ecf7c7;
+  --color-card-important-title: #f3f56a;
 
-  --color-card-urgent: #e7f7c7;
-  --color-card-urgent-title: #ecf56a;
+  --color-card-urgent: #f7e2c7;
+  --color-card-urgent-title: #f5bd6a;
+
+  --color-card-immediate: #f7d4c7;
+  --color-card-immediate-title: #f57d6a;
 
   --spacing-xsmall: 4px;
   --spacing-small: 8px;
@@ -42,9 +45,14 @@
 }
 
 h1 {
-    font-family: 'Cedarville Cursive', cursive;
+    font-weight: bold;
     font-size: 32px;
     text-shadow: var(--text-shadow);
+    font-family: 'Courier New', Courier, monospace;
+}
+
+h3 {
+    font-size: 18px;
 }
 
 header {
@@ -64,20 +72,94 @@ main ul {
     flex-direction: row;
     gap: var(--spacing-small);
     margin: var(--spacing-medium);
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
-main ul li {
-    display: block;
+.category-container > li {
+    list-style: none;
 }
 
 .card {
     width: fit-content;
     height: fit-content;
     min-height: 100px;
-    min-width: 100px;
+    width: 20%;
+}
+
+.card .container {
+    font-size: large;
+    font-family: 'Cedarville Cursive', cursive;
+}
+
+.card .container > ul {
+    display: flex;
+    flex-direction: column;
+}
+
+.card .container > li {
+    text-align: justify;
 }
 
 .card .card-category {
-    background-color: var(--color-secondary);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--spacing-small);
+    text-shadow: var(--text-shadow);
+    text-align: start;
+}
+
+.card .card-category > span {
+    text-shadow: var(--text-shadow);
+}
+
+@keyframes rotate180 {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(180deg);
+    }
+  }
+
+.card .card-category > span:hover {
+    animation-name: rotate180;
+    animation-duration: 500ms;
+}
+
+.card.optional {
+    background-color: var(--color-card-optional);
+}
+
+.card.optional .card-category {
+    background-color: var(--color-card-optional-title);
+}
+
+.card .card-category h3 {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.card.important {
+    background-color: var(--color-card-important);
+}
+
+.card.important .card-category {
+    background-color: var(--color-card-important-title);
+}
+
+.card.urgent {
+    background-color: var(--color-card-urgent);
+}
+
+.card.urgent .card-category {
+    background-color: var(--color-card-urgent-title);
+}
+
+.card.immediate {
+    background-color: var(--color-card-immediate);
+}
+
+.card.immediate .card-category {
+    background-color: var(--color-card-immediate-title);
 }
